# m365_openai_proxy.py

./: .gitignore  AGENTS.md  README.md  REVERSE_ENGINEERING.md  m365_openai_proxy.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
experiments/: dump_frames.py  mock_mcp_server.py  probe_conversation_reuse.py  probe_local_mcp.py  test_continuity_offline.py  test_local_mcp_offline.py  test_throttle_429_offline.py  test_token_refresh_race_offline.py
scripts/: probe_conversation_reuse.py  probe_local_mcp.py
tests/: conftest.py  test_continuity.py  test_credential_precedence.py  test_security_risk_scrub.py  test_throttle_429.py  test_token_refresh_race.py
