[project]
name = "m365-openai-proxy"
# Keep this in sync with `PROXY_VERSION` in m365_openai_proxy.py (the canonical
# source, reported in the startup banner + HTTP Server header) and with the
# git tag / GitHub Release for the same version (SemVer `X.Y.Z`, tag `vX.Y.Z`).
# See AGENTS.md "Versioning & releases" for the release checklist.
version = "0.9.0"
description = "An OpenAI-compatible proxy for Microsoft 365 Copilot, shipped as a single stdlib-only Python file."
readme = "README.md"
requires-python = ">=3.11"
# The shipped proxy (m365_openai_proxy.py) has NO runtime dependencies, by
# design -- it is pure Python standard library so it can be dropped onto any
# machine with a Python 3 interpreter and run with nothing to install. Keep
# this list empty forever (see AGENTS.md).
dependencies = []

[dependency-groups]
# Developer-only tooling, managed by uv (`uv sync`). NONE of this is required
# to run the proxy -- it is the "workshop" around the stdlib-only deliverable:
# the test suite, the linter/formatter, and the security scanner CI runs.
# Exact versions are pinned in uv.lock (`uv sync` / `uv run`).
dev = [
    "pytest>=8",
    "ruff>=0.14",
    "bandit>=1.9",
]

[tool.uv]
# There is nothing to build here -- the product is a single script, not an
# installable package. Treat this as a virtual project so `uv sync` only
# manages the dev tooling and never tries to build/install m365_openai_proxy.
package = false

[tool.pytest.ini_options]
# Put the repo root on sys.path so the offline tests can
# `import m365_openai_proxy` directly (the proxy lives at the repo root as a
# single file, not under a package). `tests/` holds the network-free suite;
# `scripts/` holds live, credential-requiring probes that are NOT tests.
pythonpath = ["."]
testpaths = ["tests"]

[tool.bandit]
# This project is a single stdlib-only script (see README) -- there is no
# build system here, this file exists solely to hold bandit's config.
#
# Skipped checks, and why each is a false positive/non-issue in this file:
#
# B101 (assert_used): m365_openai_proxy.py has exactly one assert, a
#   startup-time sanity check that the from-scratch pure-Python AES S-box
#   construction produced the textbook FIPS-197 values (see
#   REVERSE_ENGINEERING.md). It's a correctness self-check for the crypto
#   implementation, not a security control -- if it's ever compiled out
#   under `-O`, nothing security-relevant is lost, the module just loses an
#   early sanity check in favor of failing later/louder on bad ciphertext.
#
# B105 (hardcoded_password_string): every hit is bandit's heuristic matching
#   a variable/string containing a "token"/"password"-adjacent word. In this
#   file that's always either a fixed HTTPS endpoint constant (e.g.
#   TOKEN_URL_TEMPLATE, TOKEN_REDIRECT_URI) or long human-readable
#   documentation text in FIELD_COMMENTS explaining to the *user* how to
#   obtain and paste their own credentials into local gitignored files. No
#   actual secret is ever hardcoded here -- real credentials only ever live
#   in the four *.conf files this script reads at runtime (see .gitignore).
skips = ["B101", "B105"]
